footer file added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
           </div>
         </div>  
       </section>
+
+ <section class="directions">
+    <div class="our-directions">
+      <p>Our direction and promising</p>
+      <p>areas of development</p>
+    </div>
+  </section>
    </body>
+
+   <footer>
+    <div class="footer-wrapper">
+      <div class="footer-section">
+       </div>
+      <div class="footer-section">
+      </div>
+      <div class="footer-section">
+      </div>
+      <div class="footer-section">
+      </div>
+    </div>
+   </footer>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="script/script.js"></script>
 </html>
