footer workin progress

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="css/index.css" />
         <link rel="stylesheet" href="css/header.css" />
+        <link rel="stylesheet" href="css/footer.css" />
         <title>TechTitans</title>
     </head>
     <header>
@@ -22,8 +24,8 @@
                 <a href="#" class="subpage-item">Software</a>
                 <a href="#" class="subpage-item">Blog</a>
             </div>
-            <div class="button">
-                <button>Contact</button>
+            <div>
+                <button class="header-button">Contact</button>
             </div>
         </div>
     </header>
@@ -117,10 +119,29 @@
     </body>
     <footer>
         <div class="footer-wrapper">
+            <div class="footer-section">
+              <p class="company-name">TechTitans</p>
+              <p class="company-description">Tut dannie dlya nashei company</p>
+            </div>
+            <div class="footer-section">
+              <div class="href-buttons">
+              <a href="#" class="footer-button">Solutions</a>
+              <a href="#" class="footer-button">Services</a>
+              <a href="#" class="footer-button">About us</a>
+              <a href="#" class="footer-button">Blog</a>
+              <div class="footer-button">
+                </div>
+                <button>Contact us</button>
+            </div>
+            </div>
             <div class="footer-section"></div>
-            <div class="footer-section"></div>
-            <div class="footer-section"></div>
-            <div class="footer-section"></div>
+            <div class="footer-section">
+              <p>Follow Us On:</p>
+              <i class="fab fa-twitter"></i> Twitter
+              <i class="fab fa-linkedin"></i> LinkedIn
+              <i class="fab fa-facebook"></i> Facebook
+              <br><br>2022 Tech Titans.<br>All rights reserved.
+            </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
