--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#" class="subpage-item">Blog</a>
             </div>
             <div>
-                <button class="header-button">Contact</button>
+                <button class="header-button">Language</button>
             </div>
         </div>
     </header>
