--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="team">
                 <div class="content">
                     <h2><b>Our Team.</b></h2>
-                    <p>
+                    <p id="description">
                         Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
                         ambitious minds working collaboratively to bring your wildest dreams to life.
                     </p>
@@ -113,17 +113,17 @@
                 </div>
             </div>
             <div class="read-more">
-                <p>Read more about our solution in Solution and Vision tabs.</p>
+                <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
             </div>
         </section>
     </body>
     <footer>
         <div class="footer-wrapper">
             <div class="footer-section">
-              <p class="company-name">TechTitans</p>
+              <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
               <p class="company-description">Tut dannie dlya nashei company</p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section" id="buttons">
               <div class="href-buttons">
               <a href="#" class="footer-button">Solutions</a>
               <a href="#" class="footer-button">Services</a>
@@ -135,13 +135,11 @@
             </div>
             </div>
             <div class="footer-section"></div>
-            <div class="footer-section">
+            <div class="footer-section" id="social">
               <p>Follow Us On:</p>
-              <i class="fab fa-twitter"></i> Twitter
-              <i class="fab fa-linkedin"></i> LinkedIn
-              <i class="fab fa-facebook"></i> Facebook
-              <br><br>2022 Tech Titans.<br>All rights reserved.
-            </div>
+              <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
+              <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
+            </div> 
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
