--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="subpages">
                 <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
-                <a href="#" class="subpage-item">Solutions</a>
+                <a href="solutions.html" class="subpage-item">Solutions</a>
                 <a href="#" class="subpage-item">Vision</a>
                 <a href="#" class="subpage-item">Software</a>
                 <a href="#" class="subpage-item">Blog</a>
