--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
    </header>
    <body>
+      <div class="page-wrapper">
       <section>
          <div class="welcome">
             <img src="img/office.png" alt="card" />
@@ -116,6 +117,7 @@
             <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
          </div>
       </section>
+   </div>
    </body>
    <footer>
       <div class="footer-wrapper">
