--- a/vision.html
+++ b/vision.html
@@ -30,6 +30,7 @@
       </div>
    </header>
    <body>
+      <div class="page-wrapper">
       <section class="header-section">
          <div class="header-panel">
             <img src="img/vision-img.png" alt="header" class="header-img" />
@@ -96,6 +97,7 @@
          </div>
          </div>
       </section>
+   </div>
    </body>
    <footer>
       <div class="footer-wrapper">
