--- a/solutions.html
+++ b/solutions.html
@@ -30,6 +30,7 @@
       </div>
    </header>
    <body>
+      <div class="page-wrapper">
       <section>
          <div class="business">
             <h2>
@@ -95,6 +96,7 @@
             </table>
          </div>
       </section>
+   </div>
    </body>
    <footer>
       <div class="footer-wrapper">
