animations and css code rework

--- a/solutions.html
+++ b/solutions.html
@@ -58,8 +58,8 @@
                </tr>
                <tr class="data-management">
                   <td class="smaller"><img src="/img/layers.png" alt=""></td>
-                  <td>
-                     <h2>Data Management and Insight</h2>
+                  <td class="management">
+=                     <h2>Data Management and Insight</h2>
                      <p>In today's data-driven world, it's more important than ever to effectively manage and<br>
                         analyze your data. At Tech Titans, we offer comprehensive data management<br>
                         solutions that help you make better business decisions. Our data scientists use the<br>
@@ -71,7 +71,7 @@
                </tr>
                <tr class="custom-app">
                   <td class="smaller"><img src="/img/process.png" alt=""></td>
-                  <td>
+                  <td class="application-development">
                      <h2>Custom Application Development</h2>
                      <p>At Tech Titans, we understand that every business has unique needs that can't always<br>
                         be met by off-the-shelf software solutions. That's why we offer custom application<br>
@@ -83,7 +83,7 @@
                </tr>
                <tr class="support">
                   <td class="smaller"><img src="/img/customer-service.png" alt=""></td>
-                  <td>
+                  <td class="customer-support">
                      <h2>Exceptional Customer Support</h2>
                      <p>At Tech Titans, we believe that exceptional customer support is just as important as<br>
                         great software. That's why we offer full customer experience services, including<br>
@@ -125,4 +125,5 @@
    </footer>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="script/script.js"></script>
+   <script src="script/solutions.js"></script>
 </html>
