--- a/vision.html
+++ b/vision.html
@@ -126,4 +126,5 @@
    </footer>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="script/script.js"></script>
+   <script src="script/vision.js"></script>
 </html>
