--- a/solutions.html
+++ b/solutions.html
@@ -118,8 +118,10 @@
          <div class="footer-section"></div>
          <div class="footer-section" id="social">
             <p>Follow Us On:</p>
+            <div class="social-icons">
             <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
-            <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
+            </div>
+            <span class="footer-info">© 2022 Tech Titans.<br>All rights reserved.</span>
          </div>
       </div>
    </footer>
