--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
-            <a href="#" class="subpage-item">Software</a>
+            <a href="software.html" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
          <div>
