--- a/vision.html
+++ b/vision.html
@@ -21,7 +21,7 @@
             <a href="index.html" class="subpage-item">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="#" class="subpage-item" style="color: #729fce;">Vision</a>
-            <a href="#" class="subpage-item">Software</a>
+            <a href="software.html" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
          <div>
