--- a/software.html
+++ b/software.html
@@ -82,7 +82,7 @@
             <a href="#" class="footer-button">Blog</a>
             <div class="footer-button">
             </div>
-            <button>Contact us</button>
+            <button onclick="window.location.href='contact-us.html';">Contact us</button>
          </div>
       </div>
       <div class="footer-section"></div>
