--- a/contact-us.html
+++ b/contact-us.html
@@ -19,7 +19,7 @@
          </div>
          <div class="subpages">
             <a href="index.html" class="subpage-item">Home</a>
-            <a href="#solutions.html" class="subpage-item">Solutions</a>
+            <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
             <a href="#" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
@@ -30,6 +30,7 @@
       </div>
    </header>
    <body>
+      <div class="page-wrapper">
     <section>
         <div class="startup">
            <h2>Empower Your Startup<h2>
@@ -86,6 +87,7 @@
         
       </div>
      </section>
+   </div>
    </body>
    <footer>
       <div class="footer-wrapper">
