--- a/software-description.html
+++ b/software-description.html
@@ -6,7 +6,7 @@
       <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-      <link rel="stylesheet" href="css/software.css" />
+      <link rel="stylesheet" href="css/software-description.css" />
       <link rel="stylesheet" href="css/header.css" />
       <link rel="stylesheet" href="css/footer.css" />
       <title>TechTitans</title>
@@ -31,42 +31,22 @@
    </header>
    <body>
     <div class="page-wrapper">
-    <div class="header-title">
-        <p>SOFTWARE</p>
-     </div>
-     <div class="header-description">
-        <p>Page on maintenance
-        </p>
-     </div>
-        <div class="table">
-            <div class="table-column">
-            <img src="img/cloud-analytics.webp" alt="1" class="software-img">
-            <div class="software-name">Cloud Analytics For Beginners</div>
-            <div class="software-duration">2 Weeks</div>
-            <div class="divider"></div>
-            <div class="software-price">RON 80.00</div>
-            <button class="software-button">Join</button>
-            </div>
 
-            <div class="table-column">
-            <img src="img/data-analytics.webp" alt="2" class="software-img">
-            <div class="software-name">Data Analytics Tools</div>
-            <div class="software-duration">4 Weeks</div>
-            <div class="divider"></div>
-            <div class="software-price">RON 120.00</div>
-            <button class="software-button">Join</button>
+        <div class="header-wrapper">
+            <div class="header-content">
+            <div class="header-title">
+                <p>PLACEHOLDER</p>
+             </div>
+             <div class="header-period">
+                <p>placeholder</p>
+             </div>
             </div>
+             <div class="header-image">
+                <img src="../img/data-analytics.webp" alt="Course Image">
+            </div>
+             </div>
 
-            <div class="table-column">
-            <img src="img/data-driven.webp" alt="3" class="software-img">
-            <div class="software-name">Data-driven Decision Making</div>
-            <div class="software-duration">8 Weeks</div>
-            <div class="divider"></div>
-            <div class="software-price">RON 150.00</div>
-            <button class="software-button">Join</button>
-            </div>
-        </div>
-</div>
+    </div>
 </body>
 <footer>
    <div class="footer-wrapper">
@@ -97,4 +77,5 @@
 </footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script/script.js"></script>
+<script src="script/software.js"></script>
 </html>
