--- a/software.html
+++ b/software.html
@@ -27,7 +27,26 @@
          <div>
             <button class="header-button">Language</button>
          </div>
+         <div class="hamburger" id="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
       </div>
+
+      <div class="panel" id="panel">
+         <div class="mobile-subpages">
+            <div>
+               <button class="mobile-header-button">Language</button>
+            </div>
+            <div class="divider"></div>
+            <a href="index.html" class="subpage-item">Home</a>
+            <a href="solutions.html" class="subpage-item">Solutions</a>
+            <a href="vision.html" class="subpage-item">Vision</a>
+            <a href="#" class="subpage-item" style="color: #729fce;">Software</a>
+            <a href="#" class="subpage-item">Blog</a>
+         </div>
+       </div>
    </header>
    <body>
     <div class="page-wrapper">
