--- a/contact-us.html
+++ b/contact-us.html
@@ -131,7 +131,7 @@
             <div class="social-icons">
             <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
             </div>
-            <span class="footer-info">© 2022 Tech Titans.<br>All rights reserved.</span>
+            <span class="footer-info">© 2022 Tech Titans. All rights reserved.</span>
          </div>
       </div>
    </footer>
