--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
       <div class="panel" id="panel">
          <div class="mobile-subpages">
             <div>
-               <button class="mobile-header-button">Language</button>
+               <div class="dropdown">
+                  <a class="mobile-btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
+                    Language
+                  </a>
+                
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">EN</a>
+                    <a class="dropdown-item" href="#">RU</a>
+                    <a class="dropdown-item" href="#">RO</a>
+                    <a class="dropdown-item" href="#">UA</a>
+                  </div>
+                </div>
             </div>
             <div class="divider"></div>
             <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
