--- a/solutions.html
+++ b/solutions.html
@@ -23,7 +23,7 @@
             <div class="company-name">Tech Titans</div>
          </div>
          <div class="subpages">
-            <a href="index.html" class="subpage-item" style="color: #729fce;">Home</a>
+            <a href="index.html" class="subpage-item">Home</a>
             <a href="#" class="subpage-item" style="color: #729fce;">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
             <a href="#" class="subpage-item">Software</a>
