--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                </div>
             </div>
             <div class="read-more">
-               <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
+               <p>Read more about our solution in <a href="solutions.html">Solution</a> and <a href="vision.html">Vision</a> tabs.</p>
             </div>
          </section>
       </div>
