--- a/contact-us.html
+++ b/contact-us.html
@@ -22,7 +22,7 @@
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
             <a href="#" class="subpage-item">Software</a>
-            <a href="#" class="subpage-item">Blog</a>
+            <!-- <a href="#" class="subpage-item">Blog</a> -->
          </div>
          <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
