--- a/software.html
+++ b/software.html
@@ -27,17 +27,17 @@
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
             <a href="software.html" class="subpage-item">Software</a>
-            <a href="#" class="subpage-item">Blog</a>
+            <!-- <a href="#" class="subpage-item">Blog</a> -->
          </div>
          <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-            Language
+               <img src="img/globe.png" alt="Lang" /> 
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-               <a class="dropdown-item" href="#">EN</a>
-               <a class="dropdown-item" href="#">RU</a>
-               <a class="dropdown-item" href="#">RO</a>
-               <a class="dropdown-item" href="#">UA</a>
+               <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt="">  English</a>
+               <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt="">  Russian</a>
+               <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt="">  Romanian</a>
+               <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt="">  Ukrainian</a>
             </div>
          </div>
          <div class="hamburger" id="hamburger">
