--- a/software.html
+++ b/software.html
@@ -120,7 +120,7 @@
             <a href="solutions.html" class="footer-button">Solutions</a>
             <a href="solutions.html" class="footer-button">Services</a>
             <a href="vision.html" class="footer-button">About us</a>
-            <a href="#" class="footer-button">Blog</a>
+            <!-- <a href="#" class="footer-button">Blog</a> -->
             <div class="footer-button">
             </div>
             <button onclick="window.location.href='contact-us.html';">Contact us</button>
