--- a/solutions.html
+++ b/solutions.html
@@ -150,7 +150,7 @@
                <a href="solutions.html" class="footer-button" style="color: #729fce;">Solutions</a>
                <a href="#" class="footer-button">Services</a>
                <a href="vision.html" class="footer-button">About us</a>
-               <a href="#" class="footer-button">Blog</a>
+               <!-- <a href="#" class="footer-button">Blog</a> -->
                <div class="footer-button">
                </div>
                <button onclick="window.location.href='contact-us.html';">Contact us</button>
