--- a/vision.html
+++ b/vision.html
@@ -149,9 +149,9 @@
          <div class="footer-section" id="buttons">
             <div class="href-buttons">
                <a href="solutions.html" class="footer-button">Solutions</a>
-               <a href="solutions.html" class="footer-button">Services</a>
+               <a href="vision.html" class="footer-button">Services</a>
                <a href="vision.html" class="footer-button" style="color: #729fce;">About us</a>
-               <a href="#" class="footer-button">Blog</a>
+               <!-- <a href="#" class="footer-button">Blog</a> -->
                <div class="footer-button">
                </div>
                <button onclick="window.location.href='contact-us.html';">Contact us</button>
