--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="header">
          <div class="logo">
             <img src="img/logo.png" alt="Logo" />
-            <div class="company-name">Tech Titans</div>
+            <div class="company-name"><a>Tech Titans</div>
          </div>
          <div class="subpages">
             <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
