--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <header>
    <div class="header">
       <div class="logo">
-         <img src="img/logo.png" alt="Logo" />
+         <img src="img/logo.svg" alt="Logo" />
          <div class="company-name"><a>Tech Titans</div>
       </div>
       <div class="subpages">
