--- a/solutions.html
+++ b/solutions.html
@@ -100,7 +100,7 @@
                <tr class="data-management">
                   <td class="smaller"><img src="/img/layers.png" alt=""></td>
                   <td class="management">
-=                     <h2>Data Management and Insight</h2>
+                     <h2>Data Management and Insight</h2>
                      <p>In today's data-driven world, it's more important than ever to effectively manage and<br>
                         analyze your data. At Tech Titans, we offer comprehensive data management<br>
                         solutions that help you make better business decisions. Our data scientists use the<br>
